--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ input[id="input-points"]:focus {
   const apiKey = urlParams.get("API_KEY");
   
   if (!apiKey) {
-    window.location.replace('https://milankacar.github.io/points-check/?' + idValue);
+    window.location.replace('https://milankacar.github.io/points-check/?id=' + idValue);
   }
 
   // Function to get and display points
