--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ input[id="input-points"]:focus {
       <div id="available-points" style="padding-bottom: 14px;">Points à déduire CHF</div>
       <div id="loadingScreen" class="loading-style"></div>
       <div class="flex-container" style="padding-bottom: 14px;">
-        <input id="input-points" name="quantity" min="1" max="10000">
+        <input id="input-points" name="quantity" min="1" max="10000" type="tel">
       </div>
       <button class="button" type="button" id="subtract-button">Subtract</button>
   </div>
