--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ input[id="input-points"]:focus {
               // Clear the input field
               inputElement.value = "";
               return null;
-          } else {
+          } else if (numericValue == currentPoints){
               console.log("Numeric Value:", numericValue);
               return numericValue;
           }
