--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@ input[id="input-points"]:focus {
               if (data.success) {
                 const progressBar = document.getElementById('progressbar');
                 progressbar.style.setProperty('--value', '0');
+                showProgressBar();
                 //getPoints(idValue);
                 
                 progressbar.style.setProperty('--value', data.points.toString());
