--- a/index.html
+++ b/index.html
@@ -474,10 +474,11 @@ input[id="input-points"]:focus {
               if (data.success) {
                 const progressBar = document.getElementById('progressbar');
                 progressbar.style.setProperty('--value', '0');
+                currentPoints = data.points
                 showProgressBar();
                 //getPoints(idValue);
                 
-                progressbar.style.setProperty('--value', data.points.toString());
+                progressbar.style.setProperty('--value', currentPoints.toString());
                 
                 var inputElement = document.getElementById("input-points");
                 inputElement.value = "";
